Fixed double borders in the Views UI.

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -678,6 +678,6 @@ details.views-display-column.form-wrapper {
     padding: 0;
   }
   .collection:not(:first-child) {
-    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
   }
 }
